--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
@@ -6,6 +7,9 @@
     <title>SolarExpert Pro - Calculadora Fotovoltaica</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
+      // Shim para evitar ReferenceError: process is not defined em libs que esperam ambiente Node
+      window.process = { env: { NODE_ENV: 'development' } };
+      
       tailwind.config = {
         darkMode: 'class',
         theme: {
@@ -32,14 +36,17 @@
     "react": "https://esm.sh/react@18.2.0",
     "react/": "https://esm.sh/react@18.2.0/",
     "react-dom": "https://esm.sh/react-dom@18.2.0",
+    "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
     "react-dom/": "https://esm.sh/react-dom@18.2.0/",
     "lucide-react": "https://esm.sh/lucide-react@0.263.1",
-    "@google/genai": "https://esm.sh/@google/genai@0.2.1"
+    "@google/genai": "https://esm.sh/@google/genai@0.2.1",
+    "jspdf": "https://esm.sh/jspdf@2.5.1"
   }
 }
 </script>
 </head>
   <body class="bg-slate-50 dark:bg-slate-950 transition-colors duration-300">
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
